// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ffffff;
  background: #151a2d;
  border: 1px solid #151a2d;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size large 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 1rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 2rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size medium 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size small 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.625rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.5rem;
  gap: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.emotion-3 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-3 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      <svg
        class="emotion-3 emotion-4"
        fill="none"
        height="20"
        viewBox="0 0 16 16"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10ZM11 6C11 6.55228 10.5523 7 10 7C9.44771 7 9 6.55228 9 6C9 5.44772 9.44771 5 10 5C10.5523 5 11 5.44772 11 6ZM9 9C8.58579 9 8.25 9.33579 8.25 9.75C8.25 10.1642 8.58579 10.5 9 10.5H9.25338C9.41332 10.5 9.53213 10.6481 9.49743 10.8042L9.03829 12.8704C8.79542 13.9633 9.62706 15 10.7466 15H11C11.4142 15 11.75 14.6642 11.75 14.25C11.75 13.8358 11.4142 13.5 11 13.5H10.7466C10.5867 13.5 10.4679 13.3519 10.5026 13.1958L10.9617 11.1296C11.2046 10.0367 10.3729 9 9.25338 9H9Z"
          fill="#727683"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
